client/k8s/risks/echoservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: raz-test
spec:
  selector:
    app: echo
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: LoadBalancer
