client/k8s/risks/echoservicedep.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo-deployment
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: NodePort
